# fresh

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  FindFresh.cmake  README  defines.pri  fresh-bundle.pri  fresh-subdirs.pro  fresh.pri  fresh.pro  fresh_shared.prf  fresh_static.prf  functions.pri  installs.pri  mk-include.sh  subdirs.pro
Python/: CMakeLists.txt  configure.py  fresh.sip
Python/Core/: pNetworkAccessManager.sip  pSettings.sip  pTranslationManager.sip  pVersion.sip
Python/Gui/: pActionsMenuBar.sip  pActionsModel.sip  pActionsNode.sip  pActionsNodeMenuBar.sip  pActionsNodeModel.sip  pActionsNodeShortcutEditor.sip  pActionsShortcutEditor.sip  pColorButton.sip  pConsole.sip  pConsoleCommand.sip  pDockToolBar.sip  pDockToolBarManager.sip  pDockToolBarManagerModernWidget.sip  pDockWidget.sip  pDockWidgetTitleBar.sip  pDrawingUtils.sip  pEnvironmentVariableEditor.sip  pEnvironmentVariablesEditor.sip  pEnvironmentVariablesManager.sip  pEnvironmentVariablesModel.sip  pFileDialog.sip  pFileListEditor.sip  pGuiUtils.sip  pIconManager.sip  pKeySequenceEdit.sip  pLineEdit.sip  pMainWindow.sip  pPathListEditor.sip  pPaypalButton.sip  pQueuedMessageToolBar.sip  pQueuedMessageWidget.sip  pRecursiveSortFilterProxyModel.sip  pStringListEditor.sip  pStylesActionGroup.sip  pStylesToolButton.sip  pToolButton.sip  pTranslationDialog.sip  pTreeComboBox.sip  pUpdateChecker.sip  pUpdateCheckerDialog.sip
Python/cmake/modules/: FindPyQt4.cmake
cpp-examples/: examples.pro
cpp-examples/src/: main.cpp
debian/: Makefile  README.Debian  changelog  control  copyright  debian_fresh_packaging.sh  functions.sh  libfresh-dev.dirs  libfresh-dev.install  libfresh1.dirs  libfresh1.install  pbuilderrc  python-qt4-fresh-dev.dirs  python-qt4-fresh-dev.install  python-qt4-fresh1.install  rules
debian/debian-common/: README.source  changelog  control  python-qt4-fresh-dev.dirs  python-qt4-fresh-dev.install  python-qt4-fresh1.install
debian/debian-squeeze/: libfresh1.install  python-qt4-fresh1.install
doc/: Doxyfile  README.doc
doc/qch/: Fresh Qt Extension Library-1.1.0.qch
examples/: examples.pro
examples/cpp/: examples.pro
examples/cpp/src/: MainWindow.cpp  MainWindow.h  main.cpp
examples/python/: freshexample.py  freshresource.py
examples/src/: MainWindow.cpp  MainWindow.h  main.cpp
include/Core/: FreshExport  pCoreUtils  pFileSystemUtils  pGetOpt  pGroupPath  pNetworkAccessManager  pSettings  pSingleton  pTranslationManager  pVersion
include/FreshCore/: Fresh  FreshExport  pCoreUtils  pGenericTableModel  pGetOpt  pLocaleModel  pLocaleSortFilterProxyModel  pMacHelpers  pNetworkAccessManager  pQtResourceModel  pSettings  pTranslationManager  pVersion  pWinHelpers
include/FreshGui/: pActionsMenuBar  pActionsModel  pActionsNode  pActionsNodeMenuBar  pActionsNodeModel  pActionsNodeShortcutEditor  pActionsShortcutEditor  pCheckComboBox  pCollapsibleFrame  pColorButton  pComboBox  pConsole  pConsoleCommand  pDockToolBar  pDockToolBarManager  pDockToolBarManagerModernWidget  pDockWidget  pDockWidgetTitleBar  pEnvironmentVariableEditor  pEnvironmentVariablesEditor  pEnvironmentVariablesManager  pEnvironmentVariablesModel  pFileDialog  pFileListEditor  pFontButton  pGuiUtils  pIconManager  pImageResourcePicker  pKeySequenceEdit  pLineEdit  pMainWindow  pPathListEditor  pPaypalButton  pQtResourceDialog  pQueuedMessageToolBar  pQueuedMessageWidget  pRecursiveSortFilterProxyModel  pResourcePicker  pSpinBox  pStringListEditor  (+7 more)
include/Gui/: pActionsNodeModel  pDrawingUtils  pEnvironmentVariablesEditor  pEnvironmentVariablesModel  pGuiUtils  pIconManager  pKeySequenceEdit  pPathListEditor  pRecursiveSortFilterProxyModel  pStringListEditor  pStylesActionGroup  pToolButton
py-examples/: freshexample.py
resources/: fresh.qrc
src/core/: Core.h  FileSystemUtils.cpp  FileSystemUtils.h  Fresh.cpp  Fresh.h  FreshExport.h  pCoreUtils.cpp  pCoreUtils.h  pFileSystemUtils.cpp  pFileSystemUtils.h  pGenericTableModel.cpp  pGenericTableModel.h  pGetOpt.cpp  pGetOpt.h  pGroupPath.cpp  pGroupPath.h  pLocaleModel.cpp  pLocaleModel.h  pLocaleSortFilterProxyModel.cpp  pLocaleSortFilterProxyModel.h  pMacHelpers.h  pMacHelpers.mm  pNetworkAccessManager.cpp  pNetworkAccessManager.h  pQtResourceModel.cpp  pQtResourceModel.h  pRecursiveSortFilterProxyModel.cpp  pRecursiveSortFilterProxyModel.h  pSettings.cpp  pSettings.h  pSingleton.cpp  pSingleton.h  pTranslationManager.cpp  pTranslationManager.h  pVersion.cpp  pVersion.h  pWinHelpers.h
src/gui/: Gui.h  pActionsNode.cpp  pActionsNodeModel.h  pActionsNodeShortcutEditor.cpp  pActionsNodeShortcutEditor.h  pCheckComboBox.cpp  pCheckComboBox.h  pCollapsibleFrame.cpp  pCollapsibleFrame.h  pColorButton.cpp  pColorButton.h  pComboBox.cpp  pComboBox.h  pDockToolBar.cpp  pDockToolBar.h  pDockToolBarManager.cpp  pDockToolBarManager.h  pDockToolBarManagerModernWidget.cpp  pDockToolBarManagerModernWidget.h  pDrawingUtils.cpp  pDrawingUtils.h  pFileDialog.cpp  pFileDialog.h  pFileListEditor.cpp  pFileListEditor.h  pFontButton.cpp  pFontButton.h  pGuiUtils.cpp  pGuiUtils.h  pIconManager.cpp  pIconManager.h  pImageResourcePicker.cpp  pImageResourcePicker.h  pKeySequenceEdit.cpp  pKeySequenceEdit.h  pLineEdit.cpp  pLineEdit.h  pMainWindow.cpp  pMainWindow.h  pPathListEditor.cpp  (+21 more)
src/gui/actionmanager/: pActionsMenuBar.cpp  pActionsMenuBar.h  pActionsModel.cpp  pActionsModel.h  pActionsNode.cpp  pActionsNode.h  pActionsNodeMenuBar.cpp  pActionsNodeMenuBar.h  (+7 more)
translations/: fresh-ar_SA.ts  fresh-ca_ES.qm  fresh-ca_ES.ts  fresh-cs_CZ.ts  fresh-da_DK.ts  fresh-de_DE.ts  fresh-es_ES.qm  fresh-es_ES.ts  fresh-fr_FR.qm  fresh-fr_FR.ts  fresh-he_IL.ts  fresh-ja_JP.ts  fresh-pl_PL.ts  fresh-ru_RU.ts  fresh-sk_SK.ts  fresh-zh_TW.ts  fresh_ar_SA.ts  fresh_ca_ES.qm  fresh_ca_ES.ts  fresh_cs_CZ.ts  fresh_da_DK.ts  fresh_de_DE.ts  fresh_es_ES.qm  fresh_es_ES.ts  fresh_fr_FR.qm  fresh_fr_FR.ts  fresh_he_IL.ts  fresh_ja_JP.ts  fresh_pl_PL.ts  fresh_pt_PT.ts  fresh_ru_RU.ts  fresh_sk_SK.ts  fresh_sl_SI.ts  fresh_sv_SE.ts  fresh_uk_UA.ts  fresh_zh_CN.ts  fresh_zh_TW.ts
(+45 files in other folders)
